--- a/src/style.css
+++ b/src/style.css
@@ -86,7 +86,7 @@ header {
   box-shadow: 0 12px 32px 0 rgba(0,0,0,0.45), 0 8px 0 0 #181a1b;
   position: relative;
   z-index: 10;
-  margin-bottom: 2rem;
+  padding-bottom: 0px;
 }
 
 /* Add this for the boundary effect */
