--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,14 @@
 /* Reset and layout */
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  margin-top: 10px;
+  margin-left: 10px;
+  padding-left: 20px;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -158,7 +168,7 @@ header::after {
 }
 
 .nav-logo-img:hover {
-  transform: scale(1.1);
+  transform: scale(1.3);
   transition: transform 0.2s ease-in-out;
 }
 
